# ducklake

./: .Rhistory  .gitattributes  .gitignore  CLAUDE.md  CODE_REVIEW_FIXES.md  README.md  aws_setup.r  duckdb-r-fix.md  ducklake_introspect.sql  main.py  pyproject.toml
.github/workflows/: publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  ducklake-1.0-upgrade.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-aws-infrastructure/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-table-export-via-pins/: 02-01-PLAN.md  02-01-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-ducklake-catalogue/: 03-01-PLAN.md  03-01-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: CODE_REVIEW_REPORT.md  _quarto.yml  admin-guide.qmd  analyst-aws-setup.md  analyst-guide.html  analyst-guide.qmd  custom.scss  ducklake-docs.md  index.qmd
iam/: ducklake-s3-reader-policy.json
scripts/: apply_comments.R  aws_setup.r  configure_retention.sql  create_ducklake.R  create_ducklake.sql  create_views.sql  export_pins.R  export_spatial_pins.R  extract_metadata.R  migrate_ducklake.R  recreate_spatial_ducklake.sql  refresh.R  setup_iam.sh  spike_spatial.R  spike_spatial.sql  test_interop.R  test_interop.py  test_pins.r  validate_ducklake.R  validate_pins.py  validate_pins_r.R  verify_ducklake.sql  verify_s3_access.sql
(+34 files in other folders)
