[project]
name = "ducklake"
version = "0.1.0"
description = "DuckLake data catalogue and S3 pin pipeline for WECA environment data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.54",
    "duckdb>=1.5.2",
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "pins[aws]>=0.9.1",
    "pyarrow>=19.0.0",
]
